# simple-docs-bot

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: built-and-push-docker-image.yaml
src/: bot_help.rs  config.rs  database.rs  log.rs  main.rs  status.rs
src/message_handle/: mod.rs  private.rs
src/message_handle/group/: generate.rs  mod.rs  record.rs
src/utils/: git.rs  image.rs  json_parse.rs  mod.rs  reply_message.rs
