[package]
name = "simple-docs-bot"
version = "0.1.4"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time", "ansi"] }
tracing-appender = { version = "0.2" }
tokio = { version = "1.43", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
figment = { version = "0.10", features = ["json", "toml", "yaml"] }
sqlx = { version = "0.8", features = [ "postgres", "runtime-tokio", "tls-native-tls", "chrono"] }
serde_json = "1.0"
onebot_v11 = "0.1"
reqwest = {version = "0.12", features = ["rustls-tls"]}
chrono = "0.4"
uuid = {version = "1.11", features = ["v4", "fast-rng", "macro-diagnostics"]}
url = "2.5"

openssl = {version = "0.10", features = ["vendored"]}
